--- a/kontakt.html
+++ b/kontakt.html
@@ -49,7 +49,20 @@
           </fieldset>
         </form>
       </main>
-      <footer></footer>
+      <footer>
+      <ul class="nav__links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="o-nas.html">About Us</a></li>
+        <li><a href="kontakt.html">Contact</a></li>
+        <li><a href="test.html">Test</a></li>
+      </ul>
+      <h3> just links: </h3>
+        <ul class="footer__links">
+          <li> <a target="_blank" href="https://gitlab.com/">gitlab</a></li>
+          <li> <a target="_blank" href="https://www.google.com">google</a></li>
+          <li> <a target="_blank" href="https://github.com/">github</a></li>
+        </ul>
+    </footer>
     </div>
   </body>
 </html>
