--- a/o-nas.html
+++ b/o-nas.html
@@ -23,24 +23,25 @@
       </ul>
     </header>
     <main>
-      <div class="slider">
-        <div class="slides">
-          <div class="slide active">
-            <img src="https://picsum.photos/id/1018/800/400" alt="Slide 1" />
-          </div>
-          <div class="slide">
-            <img src="https://picsum.photos/id/1015/800/400" alt="Slide 2" />
-          </div>
-          <div class="slide">
-            <img src="https://picsum.photos/id/1020/800/400" alt="Slide 3" />
-          </div>
-        </div>
-
-        <button class="prev">‹</button>
-        <button class="next">›</button>
+      <div id="movies">
+        
       </div>
+      <button id="loadMoreBtn">loadMoreBtn</button>
     </main>
-    <footer></footer>
+    <footer>
+      <ul class="nav__links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="o-nas.html">About Us</a></li>
+        <li><a href="kontakt.html">Contact</a></li>
+        <li><a href="test.html">Test</a></li>
+      </ul>
+      <h3> just links: </h3>
+        <ul class="footer__links">
+          <li> <a target="_blank" href="https://gitlab.com/">gitlab</a></li>
+          <li> <a target="_blank" href="https://www.google.com">google</a></li>
+          <li> <a target="_blank" href="https://github.com/">github</a></li>
+        </ul>
+    </footer>
     <script src="js/oNas.js"></script>
   </body>
 </html>
