--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebSystem</title>
     <link rel="stylesheet" href="style/style.css" />
-    <link rel="stylesheet" href="style/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,141 +14,24 @@
   </head>
 
   <body>
-    <header>
-      <ul class="nav__links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="o-nas.html">About Us</a></li>
-        <li><a href="kontakt.html">Contact</a></li>
-        <li><a href="test.html">Test</a></li>
-      </ul>
-    </header>
     <main class="indexMain">
       <div class="parallax-box">
+        <ul class="nav__links">
+          <li><a href="index.html">Movie Atlas</a></li>
+          <li><a href="films.html">Films</a></li>
+          <li><a href="kontakt.html">Contact</a></li>
+          <li><a href="o-nas.html">About Us</a></li>
+        </ul>
         <div class="parallax-overlay"></div>
         <div class="parallax-content">
-          <h1>Hover Me</h1>
+          
+          <h1>Films worth watch</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            sed nunc fermentum, malesuada enim eu, vulputate velit. Curabitur
-            non augue vitae ipsum lacinia ultrices. Mauris nec dignissim quam.
-            Aenean aliquet sollicitudin ex, non lobortis dolor interdum ut.
-            Suspendisse ullamcorper vehicula maximus. Suspendisse molestie orci
-            nec dignissim gravida. Nullam tempor, dolor eu porttitor vestibulum,
-            justo odio volutpat risus, eu rutrum eros lectus eu tortor. In hac
-            habitasse platea dictumst. Sed porta lectus nec ullamcorper
-            volutpat. Vivamus interdum, massa quis hendrerit eleifend, augue
-            quam dapibus urna, sed dignissim massa sem quis ligula. Nulla
-            gravida elit non lorem euismod, in cursus mauris molestie. Nunc
-            vitae imperdiet urna, sit amet maximus urna. Class aptent taciti
-            sociosqu ad litora torquent per conubia nostra, per inceptos
-            himenaeos. Pellentesque habitant morbi tristique senectus et netus
-            et malesuada fames ac turpis egestas.
+            “How could you miss this masterpiece!” - they'll ask you and make you blush. Relax! There are so many movies made in this world that it's impossible to appreciate each one. But we have compiled a list of the most important ones, with the viewing of which you will not only fill in the gaps, but also become a true connoisseur of quality cinema!
           </p>
         </div>
       </div>
-      <div class="indexMain__items">
-        <div>
-          <div class="indexMain__items__block__img">
-            <img src="images/Shure_mikrofon_55S.jpg" alt="" />
-          </div>
-          <div class="indexMain__items__block__text">
-            <h2>Microphone</h2>
-            <p>
-              A microphone, colloquially called a mic (/maɪk/),[1] or mike,[a]
-              is a transducer that converts sound into an electrical signal.
-              Microphones are used in many applications such as telephones,
-              hearing aids, public address systems for concert halls and public
-              events, motion picture production, live and recorded audio
-              engineering, sound recording, two-way radios, megaphones, and
-              radio and television broadcasting. They are also used in computers
-              and other electronic devices, such as mobile phones, for recording
-              sounds, speech recognition, VoIP, and other purposes, such as
-              ultrasonic sensors or knock sensors.
-            </p>
-          </div>
-        </div>
-        <div>
-          <div class="indexMain__items__block__img">
-            <img src="images/Martin_HD28.jpg" alt="" />
-          </div>
-          <div class="indexMain__items__block__text">
-            <h2>Acoustic guitar</h2>
-            <p>
-              An acoustic guitar is a musical instrument in the string family.
-              When a string is plucked, its vibration is transmitted from the
-              bridge, resonating throughout the top of the guitar. It is also
-              transmitted to the side and back of the instrument, resonating
-              through the air in the body, and producing sound from the sound
-              hole.[1] While the original, general term for this stringed
-              instrument is guitar, the retronym 'acoustic guitar' – often used
-              to indicate the steel stringed model – distinguishes it from an
-              electric guitar, which relies on electronic amplification.
-              Typically, a guitar's body is a sound box, of which the top side
-              serves as a sound board that enhances the vibration sounds of the
-              strings. In standard tuning the guitar's six strings[2] are tuned
-              (low to high)
-            </p>
-          </div>
-        </div>
-        <div>
-          <div class="indexMain__items__block__img">
-            <img src="images/Martin_HD28.jpg" alt="" />
-          </div>
-          <div class="indexMain__items__block__text">
-            <h2>Acoustic guitar</h2>
-            <p>
-              An acoustic guitar is a musical instrument in the string family.
-              When a string is plucked, its vibration is transmitted from the
-              bridge, resonating throughout the top of the guitar. It is also
-              transmitted to the side and back of the instrument, resonating
-              through the air in the body, and producing sound from the sound
-              hole.[1] While the original, general term for this stringed
-              instrument is guitar, the retronym 'acoustic guitar' – often used
-              to indicate the steel stringed model – distinguishes it from an
-              electric guitar, which relies on electronic amplification.
-              Typically, a guitar's body is a sound box, of which the top side
-              serves as a sound board that enhances the vibration sounds of the
-              strings. In standard tuning the guitar's six strings[2] are tuned
-              (low to high)
-            </p>
-          </div>
-        </div>
-        <div>
-          <div class="indexMain__items__block__img">
-            <img src="images/Shure_mikrofon_55S.jpg" alt="" />
-          </div>
-          <div class="indexMain__items__block__text">
-            <h2>Microphone</h2>
-            <p>
-              A microphone, colloquially called a mic (/maɪk/),[1] or mike,[a]
-              is a transducer that converts sound into an electrical signal.
-              Microphones are used in many applications such as telephones,
-              hearing aids, public address systems for concert halls and public
-              events, motion picture production, live and recorded audio
-              engineering, sound recording, two-way radios, megaphones, and
-              radio and television broadcasting. They are also used in computers
-              and other electronic devices, such as mobile phones, for recording
-              sounds, speech recognition, VoIP, and other purposes, such as
-              ultrasonic sensors or knock sensors.
-            </p>
-          </div>
-        </div>
-      </div>
     </main>
-    <footer>
-      <ul class="nav__links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="o-nas.html">About Us</a></li>
-        <li><a href="kontakt.html">Contact</a></li>
-        <li><a href="test.html">Test</a></li>
-      </ul>
-      <h3> just links: </h3>
-        <ul class="footer__links">
-          <li> <a target="_blank" href="https://gitlab.com/">gitlab</a></li>
-          <li> <a target="_blank" href="https://www.google.com">google</a></li>
-          <li> <a target="_blank" href="https://github.com/">github</a></li>
-        </ul>
-    </footer>
     <script src="js/index.js"></script>
   </body>
 </html>
