--- a/kontakt.html
+++ b/kontakt.html
@@ -16,23 +16,20 @@
     <div class="container">
       <header>
         <ul class="nav__links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="o-nas.html">About Us</a></li>
+          <li><a href="index.html">Movie Atlas</a></li>
+          <li><a href="films.html">Films</a></li>
           <li><a href="kontakt.html">Contact</a></li>
-          <li><a href="test.html">Test</a></li>
+          <li><a href="o-nas.html">About Us</a></li>
         </ul>
       </header>
       <main>
         <form action="#" method="post">
           <fieldset>
             <legend>Contact Form</legend>
-
             <label for="name">Name:</label><br />
             <input type="text" id="name" name="name" required /><br /><br />
-
             <label for="email">E-mail Address:</label><br />
             <input type="email" id="email" name="email" required /><br /><br />
-
             <label for="subject">Subject:</label><br />
             <input
               type="text"
@@ -40,29 +37,27 @@
               name="subject"
               required
             /><br /><br />
-
             <label for="message">Message:</label><br />
             <textarea id="message" name="message" rows="6" required></textarea
             ><br /><br />
-
             <button type="submit">Send</button>
           </fieldset>
         </form>
       </main>
       <footer>
-      <ul class="nav__links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="o-nas.html">About Us</a></li>
-        <li><a href="kontakt.html">Contact</a></li>
-        <li><a href="test.html">Test</a></li>
-      </ul>
-      <h3> just links: </h3>
-        <ul class="footer__links">
-          <li> <a target="_blank" href="https://gitlab.com/">gitlab</a></li>
-          <li> <a target="_blank" href="https://www.google.com">google</a></li>
-          <li> <a target="_blank" href="https://github.com/">github</a></li>
+        <ul class="nav__links">
+          <li><a href="index.html">Movie Atlas</a></li>
+          <li><a href="films.html">Films</a></li>
+          <li><a href="kontakt.html">Contact</a></li>
+          <li><a href="o-nas.html">About Us</a></li>
         </ul>
-    </footer>
+        <h3>just links:</h3>
+        <ul class="footer__links">
+          <li><a target="_blank" href="https://gitlab.com/">gitlab</a></li>
+          <li><a target="_blank" href="https://www.google.com">google</a></li>
+          <li><a target="_blank" href="https://github.com/">github</a></li>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
