--- a/o-nas.html
+++ b/o-nas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebSystem</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/o-nas.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,27 +13,61 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <header>
       <ul class="nav__links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="o-nas.html">About Us</a></li>
-        <li><a href="kontakt.html">Contact</a></li>
-        <li><a href="test.html">Test</a></li>
-      </ul>
+          <li><a href="index.html">Movie Atlas</a></li>
+          <li><a href="films.html">Films</a></li>
+          <li><a href="kontakt.html">Contact</a></li>
+          <li><a href="o-nas.html">About Us</a></li>
+        </ul>
     </header>
     <main>
-      <div id="movies">
-        
+      <div>
+        <h2>About Us</h2>
+        <p>
+          
+        </p>
       </div>
-      <button id="loadMoreBtn">loadMoreBtn</button>
+      <div class="slider">
+        <div class="slides" id="slides1">
+          <!-- Clone of last slide -->
+          <div class="slide">
+            <img src="images/photo_2025-06-07_20-55-53.jpg" alt="Slide 4" />
+          </div>
+          <div class="slide">
+            <img src="https://picsum.photos/id/1018/800/400" alt="Slide 1" />
+          </div>
+          <div class="slide">
+            <img src="https://picsum.photos/id/1015/800/400" alt="Slide 2" />
+          </div>
+          <div class="slide">
+            <img src="https://picsum.photos/id/1020/800/400" alt="Slide 3" />
+          </div>
+          <div class="slide">
+            <img src="images/photo_2025-06-07_20-55-53.jpg" alt="Slide 4" />
+          </div>
+
+          <!-- Clone of first slide -->
+          <div class="slide">
+            <img
+              src="https://picsum.photos/id/1018/800/400"
+              alt="Clone First"
+            />
+          </div>
+        </div>
+
+        <button class="prev">‹</button>
+        <button class="next">›</button>
+      </div>
     </main>
     <footer>
       <ul class="nav__links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="o-nas.html">About Us</a></li>
-        <li><a href="kontakt.html">Contact</a></li>
-        <li><a href="test.html">Test</a></li>
+        <li><a href="index.html">Movie Atlas</a></li>
+          <li><a href="films.html">Films</a></li>
+          <li><a href="kontakt.html">Contact</a></li>
+          <li><a href="o-nas.html">About Us</a></li>
       </ul>
       <h3> just links: </h3>
         <ul class="footer__links">
@@ -42,6 +76,6 @@
           <li> <a target="_blank" href="https://github.com/">github</a></li>
         </ul>
     </footer>
-    <script src="js/oNas.js"></script>
+    <script src="js/o-nas.js"></script>
   </body>
 </html>
