--- a/o-nas.html
+++ b/o-nas.html
@@ -24,14 +24,14 @@
         </ul>
     </header>
     <main>
-      <div>
+      <div class="main__aboutUs">
         <h2>About Us</h2>
         <p>
-          
+
         </p>
       </div>
       <div class="slider">
-        <div class="slides" id="slides1">
+        <div class="slides" id="slides">
           <!-- Clone of last slide -->
           <div class="slide">
             <img src="images/photo_2025-06-07_20-55-53.jpg" alt="Slide 4" />
