--- a/o-nas.html
+++ b/o-nas.html
@@ -27,7 +27,9 @@
       <div class="main__aboutUs">
         <h2>About Us</h2>
         <p>
-
+          Stoianova Hanna 77604<br>
+          Ja twoj rot jebala!<br>
+          spierdalaj nachuj
         </p>
       </div>
       <div class="slider">
