bug fixed version

--- a/films.html
+++ b/films.html
@@ -16,13 +16,18 @@
   <body>
     <header>
       <ul class="nav__links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="films.html">About Us</a></li>
-        <li><a href="kontakt.html">Contact</a></li>
-        <li><a href="test.html">Test</a></li>
+         <li><a href="index.html">Movie Atlas</a></li>
+          <li><a href="films.html">Films</a></li>
+          <li><a href="kontakt.html">Contact</a></li>
+          <li><a href="o-nas.html">About Us</a></li>
       </ul>
     </header>
     <main>
+      <div class="main__searcher">
+        <label for="search">Seach Films</label>
+        <input id="searcher" type="search" placeholder="Search..">
+      </div>
+      
       <div id="movies">
         
       </div>
