--- a/o-nas.html
+++ b/o-nas.html
@@ -28,14 +28,13 @@
         <h2>About Us</h2>
         <p>
           Stoianova Hanna 77604<br>
-          Ja twoj rot jebala!<br>
-          spierdalaj nachuj
+          Skills: wokring with 3ds Max, creating 3d pojects
         </p>
       </div>
       <div class="slider">
         <div class="slides" id="slides">
           <div class="slide">
-            <img src="images/photo_2025-06-07_20-55-53.jpg" alt="Slide 4" />
+            <img src="https://picsum.photos/id/1020/800/400" alt="Slide 3" />
           </div>
           <div class="slide">
             <img src="https://picsum.photos/id/1018/800/400" alt="Slide 1" />
@@ -46,9 +45,9 @@
           <div class="slide">
             <img src="https://picsum.photos/id/1020/800/400" alt="Slide 3" />
           </div>
-          <div class="slide">
+          <!-- <div class="slide">
             <img src="images/photo_2025-06-07_20-55-53.jpg" alt="Slide 4" />
-          </div>
+          </div> -->
 
           <!-- Clone of first slide -->
           <div class="slide">
