--- a/o-nas.html
+++ b/o-nas.html
@@ -29,7 +29,9 @@
         <p>
           Stoianova Hanna 77604<br>
           Skills: wokring with 3ds Max, creating 3d pojects
+          
         </p>
+        <button onclick="sendMeSwitcher()">don't send me</button>
       </div>
       <div class="slider">
         <div class="slides" id="slides">
