--- a/o-nas.html
+++ b/o-nas.html
@@ -31,7 +31,7 @@
           Skills: wokring with 3ds Max, creating 3d pojects
           
         </p>
-        <button onclick="sendMeSwitcher()">don't send me</button>
+        <button class="sendMeSwitcher" onclick="sendMeSwitcher()">don't send me</button>
       </div>
       <div class="slider">
         <div class="slides" id="slides">
