--- a/o-nas.html
+++ b/o-nas.html
@@ -28,8 +28,9 @@
         <h2>About Us</h2>
         <p>
           Stoianova Hanna 77604<br>
-          Skills: wokring with 3ds Max, creating 3d pojects
-          
+          Skills: wokring with 3ds Max, creating 3d pojects<br><br>
+  
+          <b><i>please wait if you wanna see a surpise</i></b>
         </p>
         <button class="sendMeSwitcher" onclick="sendMeSwitcher()">don't send me</button>
       </div>
