--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
           <li><a href="films.html">Films</a></li>
           <li><a href="kontakt.html">Contact</a></li>
           <li><a href="o-nas.html">About Us</a></li>
+          
         </ul>
+        <div class="burgerB">
+            <span></span>
+          </div>
         <div class="parallax-overlay"></div>
         <div class="parallax-content">
           
@@ -32,6 +36,6 @@
         </div>
       </div>
     </main>
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
