--- a/films.html
+++ b/films.html
@@ -16,37 +16,39 @@
   <body>
     <header>
       <ul class="nav__links">
-         <li><a href="index.html">Movie Atlas</a></li>
-          <li><a href="films.html">Films</a></li>
-          <li><a href="kontakt.html">Contact</a></li>
-          <li><a href="o-nas.html">About Us</a></li>
+        <li><a href="index.html">Movie Atlas</a></li>
+        <li><a href="films.html">Films</a></li>
+        <li><a href="kontakt.html">Contact</a></li>
+        <li><a href="o-nas.html">About Us</a></li>
       </ul>
+      <div class="burgerB">
+        <span></span>
+      </div>
     </header>
     <main>
       <div class="main__searcher">
         <label for="search">Seach Films</label>
-        <input id="searcher" type="search" placeholder="Search..">
+        <input id="searcher" type="search" placeholder="Search.." />
       </div>
-      
-      <div id="movies">
-        
-      </div>
+
+      <div id="movies"></div>
       <button id="loadMoreBtn">load More</button>
     </main>
     <footer>
       <ul class="nav__links">
         <li><a href="index.html">Movie Atlas</a></li>
-          <li><a href="films.html">Films</a></li>
-          <li><a href="kontakt.html">Contact</a></li>
-          <li><a href="o-nas.html">About Us</a></li>
+        <li><a href="films.html">Films</a></li>
+        <li><a href="kontakt.html">Contact</a></li>
+        <li><a href="o-nas.html">About Us</a></li>
       </ul>
-      <h3> just links: </h3>
-        <ul class="footer__links">
-          <li> <a target="_blank" href="https://gitlab.com/">gitlab</a></li>
-          <li> <a target="_blank" href="https://www.google.com">google</a></li>
-          <li> <a target="_blank" href="https://github.com/">github</a></li>
-        </ul>
+      <h3>just links:</h3>
+      <ul class="footer__links">
+        <li><a target="_blank" href="https://gitlab.com/">gitlab</a></li>
+        <li><a target="_blank" href="https://www.google.com">google</a></li>
+        <li><a target="_blank" href="https://github.com/">github</a></li>
+      </ul>
     </footer>
-    <script src="js/films.js"></script>
+    <script type="module" src="js/films.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
