--- a/kontakt.html
+++ b/kontakt.html
@@ -22,6 +22,9 @@
           <li><a href="kontakt.html">Contact</a></li>
           <li><a href="o-nas.html">About Us</a></li>
         </ul>
+        <div class="burgerB">
+            <span></span>
+          </div>
       </header>
       <main>
         <form action="#" method="post" class="contact-form">
@@ -87,5 +90,6 @@
         </ul>
       </footer>
     </div>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
