--- a/o-nas.html
+++ b/o-nas.html
@@ -12,27 +12,33 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    
   </head>
 
   <body>
     <header>
       <ul class="nav__links">
-          <li><a href="index.html">Movie Atlas</a></li>
-          <li><a href="films.html">Films</a></li>
-          <li><a href="kontakt.html">Contact</a></li>
-          <li><a href="o-nas.html">About Us</a></li>
-        </ul>
+        <li><a href="index.html">Movie Atlas</a></li>
+        <li><a href="films.html">Films</a></li>
+        <li><a href="kontakt.html">Contact</a></li>
+        <li><a href="o-nas.html">About Us</a></li>
+      </ul>
+      <div class="burgerB">
+        <span></span>
+      </div>
     </header>
     <main>
       <div class="main__aboutUs">
         <h2>About Us</h2>
         <p>
-          Stoianova Hanna 77604<br>
-          Skills: wokring with 3ds Max, creating 3d pojects<br><br>
-  
+          Stoianova Hanna 77604<br />
+          Skills: wokring with 3ds Max, creating 3d pojects<br /><br />
+
           <b><i>please wait if you wanna see a surpise</i></b>
         </p>
-        <button class="sendMeSwitcher" onclick="sendMeSwitcher()">don't send me</button>
+        <button class="sendMeSwitcher" onclick="sendMeSwitcher()">
+          don't send me
+        </button>
       </div>
       <div class="slider">
         <div class="slides" id="slides">
@@ -63,17 +69,18 @@
     <footer>
       <ul class="nav__links">
         <li><a href="index.html">Movie Atlas</a></li>
-          <li><a href="films.html">Films</a></li>
-          <li><a href="kontakt.html">Contact</a></li>
-          <li><a href="o-nas.html">About Us</a></li>
+        <li><a href="films.html">Films</a></li>
+        <li><a href="kontakt.html">Contact</a></li>
+        <li><a href="o-nas.html">About Us</a></li>
       </ul>
-      <h3> just links: </h3>
-        <ul class="footer__links">
-          <li> <a target="_blank" href="https://gitlab.com/">gitlab</a></li>
-          <li> <a target="_blank" href="https://www.google.com">google</a></li>
-          <li> <a target="_blank" href="https://github.com/">github</a></li>
-        </ul>
+      <h3>just links:</h3>
+      <ul class="footer__links">
+        <li><a target="_blank" href="https://gitlab.com/">gitlab</a></li>
+        <li><a target="_blank" href="https://www.google.com">google</a></li>
+        <li><a target="_blank" href="https://github.com/">github</a></li>
+      </ul>
     </footer>
-    <script src="js/o-nas.js"></script>
+    <script type="module" src="js/o-nas.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
