responsive commit fin

--- a/films.html
+++ b/films.html
@@ -35,7 +35,7 @@
       <button id="loadMoreBtn">load More</button>
     </main>
     <footer>
-      <ul class="nav__links">
+      <ul class="nav__links inFooter">
         <li><a href="index.html">Movie Atlas</a></li>
         <li><a href="films.html">Films</a></li>
         <li><a href="kontakt.html">Contact</a></li>
@@ -49,6 +49,5 @@
       </ul>
     </footer>
     <script type="module" src="js/films.js"></script>
-    <script type="module" src="js/index.js"></script>
   </body>
 </html>
