--- a/kontakt.html
+++ b/kontakt.html
@@ -76,7 +76,7 @@
         </form>
       </main>
       <footer>
-        <ul class="nav__links">
+        <ul class="nav__links inFooter">
           <li><a href="index.html">Movie Atlas</a></li>
           <li><a href="films.html">Films</a></li>
           <li><a href="kontakt.html">Contact</a></li>
@@ -90,6 +90,5 @@
         </ul>
       </footer>
     </div>
-    <script type="module" src="js/index.js"></script>
   </body>
 </html>
