--- a/o-nas.html
+++ b/o-nas.html
@@ -36,7 +36,7 @@
 
           <b><i>please wait if you wanna see a surpise</i></b>
         </p>
-        <button class="sendMeSwitcher" onclick="sendMeSwitcher()">
+        <button class="sendMeSwitcher">
           don't send me
         </button>
       </div>
@@ -67,7 +67,7 @@
       </div>
     </main>
     <footer>
-      <ul class="nav__links">
+      <ul class="nav__links inFooter">
         <li><a href="index.html">Movie Atlas</a></li>
         <li><a href="films.html">Films</a></li>
         <li><a href="kontakt.html">Contact</a></li>
@@ -81,6 +81,5 @@
       </ul>
     </footer>
     <script type="module" src="js/o-nas.js"></script>
-    <script type="module" src="js/index.js"></script>
   </body>
 </html>
