--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <body>
     <main class="indexMain">
       <div class="parallax-box">
-        <ul class="nav__links">
+        <ul role="navigation" class="nav__links">
           <li><a href="index.html">Movie Atlas</a></li>
           <li><a href="films.html">Films</a></li>
           <li><a href="kontakt.html">Contact</a></li>
           <li><a href="o-nas.html">About Us</a></li>
           
         </ul>
-        <div class="burgerB">
+        <div role="navigationBurerButton" class="burgerB">
             <span></span>
           </div>
         <div class="parallax-overlay"></div>
