--- a/films.html
+++ b/films.html
@@ -14,18 +14,18 @@
     />
   </head>
   <body>
-    <header>
-      <ul class="nav__links">
+    <header role="header">
+      <ul role="navigation" class="nav__links">
         <li><a href="index.html">Movie Atlas</a></li>
         <li><a href="films.html">Films</a></li>
         <li><a href="kontakt.html">Contact</a></li>
         <li><a href="o-nas.html">About Us</a></li>
       </ul>
-      <div class="burgerB">
+      <div role="navigationBurerButton" class="burgerB">
         <span></span>
       </div>
     </header>
-    <main>
+    <main role="filmsList">
       <div class="main__searcher">
         <label for="search">Seach Films</label>
         <input id="searcher" type="search" placeholder="Search.." />
@@ -34,7 +34,7 @@
       <div id="movies"></div>
       <button id="loadMoreBtn">load More</button>
     </main>
-    <footer>
+    <footer role="contentLinks">
       <ul class="nav__links inFooter">
         <li><a href="index.html">Movie Atlas</a></li>
         <li><a href="films.html">Films</a></li>
