--- a/kontakt.html
+++ b/kontakt.html
@@ -15,14 +15,14 @@
   </head>
   <body>
     <div class="container">
-      <header>
-        <ul class="nav__links">
+      <header role="header">
+        <ul role="navigation" class="nav__links">
           <li><a href="index.html">Movie Atlas</a></li>
           <li><a href="films.html">Films</a></li>
           <li><a href="kontakt.html">Contact</a></li>
           <li><a href="o-nas.html">About Us</a></li>
         </ul>
-        <div class="burgerB">
+        <div role="navigationBurerButton" class="burgerB">
             <span></span>
           </div>
       </header>
@@ -75,7 +75,7 @@
           </fieldset>
         </form>
       </main>
-      <footer>
+      <footer role="contentLinks">
         <ul class="nav__links inFooter">
           <li><a href="index.html">Movie Atlas</a></li>
           <li><a href="films.html">Films</a></li>
