--- a/o-nas.html
+++ b/o-nas.html
@@ -16,18 +16,18 @@
   </head>
 
   <body>
-    <header>
-      <ul class="nav__links">
+    <header role="header">
+      <ul role="navigation" class="nav__links">
         <li><a href="index.html">Movie Atlas</a></li>
         <li><a href="films.html">Films</a></li>
         <li><a href="kontakt.html">Contact</a></li>
         <li><a href="o-nas.html">About Us</a></li>
       </ul>
-      <div class="burgerB">
+      <div role="navigationBurerButton" class="burgerB">
         <span></span>
       </div>
     </header>
-    <main>
+    <main role="aboutUs">
       <div class="main__aboutUs">
         <h2>About Us</h2>
         <p>
@@ -66,7 +66,7 @@
         <button class="next">›</button>
       </div>
     </main>
-    <footer>
+    <footer role="contentLinks">
       <ul class="nav__links inFooter">
         <li><a href="index.html">Movie Atlas</a></li>
         <li><a href="films.html">Films</a></li>
