swiper test commit

--- a/o-nas.html
+++ b/o-nas.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     
   </head>
 
@@ -22,6 +23,7 @@
         <li><a href="films.html">Films</a></li>
         <li><a href="kontakt.html">Contact</a></li>
         <li><a href="o-nas.html">About Us</a></li>
+        <li><a href="o-nasTestVersion.html">Test file</a></li>
       </ul>
       <div role="navigationBurerButton" class="burgerB">
         <span></span>
@@ -64,6 +66,7 @@
 
         <button class="prev">‹</button>
         <button class="next">›</button>
+        <button class="fullScreenButton">⛶</button>
       </div>
     </main>
     <footer role="contentLinks">
