--- a/o-nas.html
+++ b/o-nas.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebSystem</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/o-nas.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,8 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </head>
 
   <body>
@@ -38,35 +42,48 @@
 
           <b><i>please wait if you wanna see a surpise</i></b>
         </p>
-        <button class="sendMeSwitcher">
-          don't send me
-        </button>
+        <button class="sendMeSwitcher">don't send me</button>
       </div>
-      <div class="slider">
-        <div class="slides" id="slides">
-          <div class="slide">
-            <img src="https://picsum.photos/id/1020/800/400" alt="Slide 3" />
+      <div class="slider swiper mySwiper">
+        <div class="slides swiper-wrapper">
+          <div class="slide swiper-slide">
+            <img src="https://picsum.photos/id/1015/800/600" alt="Slide 1" />
           </div>
-          <div class="slide">
-            <img src="https://picsum.photos/id/1018/800/400" alt="Slide 1" />
+          <div class="slide swiper-slide">
+            <img src="https://picsum.photos/id/1016/800/600" alt="Slide 2" />
           </div>
-          <div class="slide">
-            <img src="https://picsum.photos/id/1015/800/400" alt="Slide 2" />
+          <div class="slide swiper-slide">
+            <img src="https://picsum.photos/id/1018/800/600" alt="Slide 3" />
           </div>
-          <div class="slide">
-            <img src="https://picsum.photos/id/1020/800/400" alt="Slide 3" />
-          </div>
-          <div class="slide">
+          <div class="slide swiper-slide">
             <img
-              src="https://picsum.photos/id/1018/800/400"
-              alt="Clone First"
+              src="images/pexels-christian-heitz-285904-842711.jpg"
+              alt="Slide 4"
             />
           </div>
+          <div class="slide swiper-slide">
+            <img
+              src="images/pexels-francesco-ungaro-1525041.jpg"
+              alt="Slide 5"
+            />
+          </div>
+          <div class="slide swiper-slide">
+            <img src="images/pexels-iriser-1379636.jpg" alt="Slide 6" />
+          </div>
+          <div class="slide swiper-slide">
+              <img src="images/pexels-chevanon-325044.jpg" alt="Slide 7" />
+            </div>
         </div>
 
-        <button class="prev">‹</button>
-        <button class="next">›</button>
-        <button class="fullScreenButton">⛶</button>
+        <!-- Navigation buttons -->
+        <button class="prev swiper-button-prev"></button>
+        <button class="next swiper-button-next"></button>
+
+        <!-- Fullscreen button (optional) -->
+        <button class="fullScreenButton" onclick="toggleFullscreen()">⛶</button>
+
+        <!-- Pagination (optional) -->
+        <div class="swiper-pagination"></div>
       </div>
     </main>
     <footer role="contentLinks">
